compelet banner section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,183 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Influencer-Gear</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="style/styles.css">
 </head>
 
 <body>
+  <header>
+    <section>
+      <nav class="navbar display-flex">
+        <h3 class="brand">Influencer products</h3>
+        <ul class="nav-links display-flex">
+          <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Products</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Sing Up</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+          <i class="fa-solid fa-magnifying-glass nav-item"></i>
+          <i class="fa-solid fa-cart-plus nav-item"></i>
+        </ul>
+        <!-- <div class="nav-icon"> -->
 
+        <!-- </div> -->
+      </nav>
+    </section>
+  </header>
+  <main>
+    <!-- banner section start -->
+    <section class="banner">
+      <div class="banner-container display-flex">
+        <div class="banner-txt ">
+          <h2 class="banner-title">Start your Journey as
+            Influencer</h2>
+          <p class="description mobile-description">Start your journey as an influencer with powerful tools, engaging
+            content, smart
+            strategies, and a strong online
+            presence.</p>
+          <button class="btn-primary">Preebook now</button>
+        </div>
+        <div class="banner-img-container">
+          <img src="images/main-camera.png" alt="">
+        </div>
+      </div>
+    </section>
+    <!-- banner section end -->
+    <!-- sponser section start -->
+    <section class="sponser">
+      <div class="sponser-container  display-flex mobile">
+        <div>
+          <img src="logos/Alibaba.svg" alt="">
+        </div>
+        <div>
+          <img src="logos/Amazon.svg" alt="">
+        </div>
+        <div>
+          <img src="logos/Daraz.pk Logo.svg" alt="">
+        </div>
+        <div><img src="logos/Ebay.svg" alt=""></div>
+        <div><img src="logos/Rakuten.svg" alt=""></div>
+        <div><img src="logos/Walmart.svg" alt=""></div>
+        <div><img src="logos/Target.svg" alt=""></div>
+      </div>
+    </section>
+
+    <section>
+      <div class="card-container">
+        <h2>Popular Collection</h2>
+        <div class="grid">
+          <div class="card">
+            <img src="images/tripod.png" alt="Flex Tripod">
+            <h3>Flex Tripod</h3>
+            <p>$50.48</p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+          <div class="card">
+            <img src="images/mic.png" alt="Microphone">
+            <h3>Microphone</h3>
+            <p>$120.25</p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+          <div class="card">
+            <img src="images/airpod.png" alt="Airbuds">
+            <h3>Airbuds</h3>
+            <p>$100.00</p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+          <div class="card">
+            <img src="images/drone.png" alt="Flex Tripod">
+            <h3>Drone</h3>
+            <p>$980.25</p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+          <div class="card">
+            <img src="images/lights.png" alt="Microphone">
+            <h3>Light Setup</h3>
+            <p>$1200.</p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+          <div class="card">
+            <img src="images/gear.png" alt="Airbuds">
+            <h3>Photoshots set</h3>
+            <p>$820.40/p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+          <div class="card">
+            <img src="images/camera.png" alt="Flex Tripod">
+            <h3>Vlogging Camera</h3>
+            <p>$1800.80</p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+          <div class="card">
+            <img src="images/single-light.png" alt="Microphone">
+            <h3>Green Screen</h3>
+            <p>$25.48</p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+          <div class="card mobile-card">
+            <img src="images/action.png" alt="Airbuds">
+            <h3>Action Camera</h3>
+            <p>$100.00</p>
+            <p class="rating">★★★★★ 4.99</p>
+            <p>Worldwide shipping available</p>
+            <p>Buyers protection possible!</p>
+          </div>
+        </div>
+        <a href="#" class="see-more">See More →</a>
+      </div>
+    </section>
+    <section class="featured">
+      <div class="feature-container display-flex">
+        <div class="feature-img">
+          <img src="images/gear.png" alt="">
+        </div>
+        <div class="feature-txt-container display-flex">
+          <h3 class="feature-title">Featured products at one place</h3>
+          <p class="description mobile-description">Featured Products at One Place: Explore top-quality, handpicked
+            products in one
+            destination for convenience, style,
+            innovation, and ultimate customer satisfaction.</p>
+          <div>
+            <a href="#" class="btn">
+              Join Now
+              <span class="btn-icon">→</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <section>
+      <div class="footer display-flex">
+        <h2>Influencer Products</h2>
+        <p>Copyright &copy; 2020 Influencer Products</p>
+        <p>All rights reserved</p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
+    </section>
+  </footer>
 </body>
 
 </html>
